V1 reclamation
add delete display reclamtion